# Google-File-System-simulator

./: .gitignore  QUICKGUIDE.md  README.md  WEB_INTERFACE.md  pyproject.toml  requirements.txt
configs/: chunkserver.yaml  master.yaml
mini_gfs/: run_chunkserver.py  run_client.py  run_master.py  run_web.py
mini_gfs/mini_gfs/: __init__.py
mini_gfs/mini_gfs/chunkserver/: __init__.py  api.py  chunkserver.py  storage.py
mini_gfs/mini_gfs/client/: __init__.py  cli.py  client_api.py
mini_gfs/mini_gfs/common/: __init__.py  config.py  types.py
mini_gfs/mini_gfs/master/: __init__.py  api.py  master.py  metadata.py  operations_tracker.py  wal.py
mini_gfs/mini_gfs/web/: __init__.py  metrics_collector.py  process_manager.py  server.py  visualization.py
mini_gfs/mini_gfs/web/static/: app.js  index.html  style.css
scripts/: run_chunkserver1.sh  run_chunkserver2.sh  run_chunkserver3.sh  run_client.sh  run_master.sh
tests/: __init__.py  test_metadata.py
