[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-gfs"
version = "0.1.0"
description = "Mini Google File System - Sistema de archivos distribuido educativo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
mini-gfs-master = "mini_gfs.run_master:main"
mini-gfs-chunkserver = "mini_gfs.run_chunkserver:main"
mini-gfs-client = "mini_gfs.client.cli:main"

